		"entrylo" register (if the lowest 8 bits were 0, the code took
		the non-R2000/R3000 code path).
20210321	Adding an empty i960 CPU skeleton [again].
		Moving 'arch' from struct machine to struct cpu; in the future,
		perhaps this would allow a machine to have heterogenous CPU
		sets (such as the Dreamcast with both SuperH and ARM).
		Removing "slow_serial_interrupts_hack_for_linux" (-U) command
		line option, since it is not used for most guest OSes, and
		occupied a command line option char.
20210323	Breaking out the mb89352 SCSI Protocol Controller from the
		luna88k device, and beginning to implement it. Works well
		enough for OpenBSD's "boot" to read the disk and load the
		kernel, but not well enough for the kernel to like it.
20210324	Adding support for 00 99 01 07 variant of luna88k a.out.
20210325	The mb89352 SCSI controller uses its own subsystem for debug
		messages.
20210327	Adding an empty RISC-V CPU skeleton [again].
		Implementing enough of the mb89352 to allow OpenBSD/luna88k
		to boot with SCSI (both the boot loader and the kernel)!
20210401	Applying a patch from George Matsumura to make things build
		better on Linux: __attribute__((__packed__));  in bootblock.h.
20210405	Adding hardcoded boot_unit=0 and boot_partition=0 NVRAM
		variables to the LUNA-88K machine, allowing OpenBSD/luna88k
		to boot from disk without asking for root and swap partitions.
		Adding 'R' (upper-case) disk image prefix, as a shorthand for
		creating temporary overlays.
20210407	Code for idling the host processor has been moved out from
		individual CPU implementations to the main emul loop.
		Implementing an X11 mouse pointer grab mechanism. Grab is
		activated by clicking in a framebuffer window, and released
		using left CTRL + ALT. When grab is active, the host mouse
		cursor is hidden and the window caption changes to indicate
		that grab is active.
20210408	Implementing an unusual 88K "not_maxneg_nor_zero" bcnd
		condition.