@@ -5035,3 +5035,7 @@ Changelog for GXemul:
 		that grab is active.
 20210408	Implementing an unusual 88K "not_maxneg_nor_zero" bcnd
 		condition.
+20210409	Moving the LUNA88K framebuffer to its own device file.
+		Beginning to implement the LUNA88K front panel LCD.
+		Also fixing a bug where the rightmost pixel (or 8 pixels in
+		the case of monochrome) were not drawn.
